--- a/contrib/Lidwood.ipynb
+++ b/contrib/Lidwood.ipynb
@@ -154,8 +154,8 @@
     "\n",
     "    rf = 1000000 * (summary['numberOfHits'] / info['tokenCount'])\n",
     "    summary['hits_per_million'] = rf\n",
-    "    print(\"info:\" + str(info))\n",
-    "    print(\"summary:\" + str(summary))\n",
+    "    #print(\"info:\" + str(info))\n",
+    "    #print(\"summary:\" + str(summary))\n",
     "    return rf\n",
     "    #display_df(df)\n",
     "    #summary = searched.summary()\n",
@@ -167,20 +167,25 @@
     "    dfsorted.plot.line(x_column, y_columns, figsize=[30,15])\n",
     "    \n",
     "#test_ja_nl()\n",
-    "def wablief_test():\n",
-    "    rf_de = relative_frequency('wablieft', \"[lemma='de']\")\n",
-    "    rf_noun = relative_frequency('wablieft', \"[pos='NOU-C.*']\")\n",
-    "    print(\"de:\"  + str(rf_de) + \", noun:\" + str(rf_noun))\n",
+    "def relative(corpus_name, query1, query2):\n",
+    "    rf_de = relative_frequency(corpus_name, query1)\n",
+    "    rf_noun = relative_frequency(corpus_name, query2)\n",
+    "    print(corpus_name + \": \" + \" de:\"  + str(rf_de) + \", noun:\" + str(rf_noun))\n",
+    "    print(corpus_name + \": \" + str(rf_de / rf_noun))\n",
     "\n",
     "def sonar_test():\n",
-    "    rf_de = relative_frequency('opensonar', \"[lemma='de']\")\n",
-    "    rf_noun = relative_frequency('opensonar', \"[pos='N.*soort.*']\")\n",
-    "    print(\"de:\"  + str(rf_de) + \", noun:\" + str(rf_noun))\n"
+    "    relative('opensonar', \"[lemma='de']\", \"[pos='N.*soort.*']\")\n",
+    "\n",
+    "def wablieft_test():\n",
+    "    relative('wablieft', \"[lemma='de']\", \"[pos='NOU-C.*']\")\n",
+    "\n",
+    "def chn_test():\n",
+    "    relative('chn_i', \"[lemma='de']\", \"[pos='NOU-C.*']\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "preliminary-engineer",
    "metadata": {
     "scrolled": true
@@ -190,18 +195,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[Fde:60728.62574105652, noun:213187.77743616523                                                                                           \n"
+      "REQUEST URL:http://pcob67:8080/blacklab-server/Wablieft/hits?&number=10&maxcount=-1&waitfortotal=yes&first=0&patt=%5Blemma%3D%27de%27%5D&filter=\n",
+      "\u001B[F                                                                 REQUEST URL:http://pcob67:8080/blacklab-server/Wablieft/hits?&number=10&maxcount=-1&waitfortotal=yes&first=0&patt=%5Bpos%3D%27NOU-C.%2A%27%5D&filter=\n",
+      "\u001B[Fwablieft:  de:60728.62574105652, noun:213187.77743616523         \n",
+      "wablieft: 0.2848597910789725\n",
+      "REQUEST URL:http://svotmc10.ivdnt.loc/blacklab-server/chn/hits?&number=10&maxcount=-1&waitfortotal=yes&first=0&patt=%5Blemma%3D%27de%27%5D&filter=\n",
+      "\u001B[F                                                                 REQUEST URL:http://svotmc10.ivdnt.loc/blacklab-server/chn/hits?&number=10&maxcount=-1&waitfortotal=yes&first=0&patt=%5Bpos%3D%27NOU-C.%2A%27%5D&filter=\n",
+      "\u001B[F                                                                 "
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "An error occured when searching corpus chn_i: syntax error: line 1, column 49",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mParseError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[0;32m~/workspace/LidWoord/chaininglib/search/CorpusQuery.py\u001B[0m in \u001B[0;36msearch\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    269\u001B[0m                 \u001B[0;32mif\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_pattern\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 270\u001B[0;31m                     \u001B[0mdf\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mnext_page\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0msummary\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcorpusHelpers\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_parse_xml_blacklab\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mresponse_text\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_detailed_context\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_extra_fields_doc\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_extra_fields_token\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mis_grouped\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    271\u001B[0m                 \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/workspace/LidWoord/chaininglib/search/corpusHelpers.py\u001B[0m in \u001B[0;36m_parse_xml_blacklab\u001B[0;34m(text, detailed_context, extra_fields_doc, extra_fields_token, is_grouped_response)\u001B[0m\n\u001B[1;32m    352\u001B[0m     \u001B[0;31m#print(text)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 353\u001B[0;31m     \u001B[0mparsed_summary\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0m_parse_xml_summary_blacklab\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtext\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    354\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/workspace/LidWoord/chaininglib/search/corpusHelpers.py\u001B[0m in \u001B[0;36m_parse_xml_summary_blacklab\u001B[0;34m(text)\u001B[0m\n\u001B[1;32m    268\u001B[0m \u001B[0;32mdef\u001B[0m \u001B[0m_parse_xml_summary_blacklab\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtext\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 269\u001B[0;31m   \u001B[0mroot\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mET\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfromstring\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtext\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    270\u001B[0m   \u001B[0msummary\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mroot\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfind\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"summary\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m/usr/lib/python3.7/xml/etree/ElementTree.py\u001B[0m in \u001B[0;36mXML\u001B[0;34m(text, parser)\u001B[0m\n\u001B[1;32m   1314\u001B[0m         \u001B[0mparser\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mXMLParser\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtarget\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mTreeBuilder\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 1315\u001B[0;31m     \u001B[0mparser\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfeed\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtext\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   1316\u001B[0m     \u001B[0;32mreturn\u001B[0m \u001B[0mparser\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mclose\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mParseError\u001B[0m: syntax error: line 1, column 49",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-2-756eee64c975>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0mwablieft_test\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 2\u001B[0;31m \u001B[0mchn_test\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      3\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m<ipython-input-1-9c7f8d04904a>\u001B[0m in \u001B[0;36mchn_test\u001B[0;34m()\u001B[0m\n\u001B[1;32m    153\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    154\u001B[0m \u001B[0;32mdef\u001B[0m \u001B[0mchn_test\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 155\u001B[0;31m     \u001B[0mrelative\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'chn_i'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m\"[lemma='de']\"\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m\"[pos='NOU-C.*']\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    156\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m<ipython-input-1-9c7f8d04904a>\u001B[0m in \u001B[0;36mrelative\u001B[0;34m(corpus_name, query1, query2)\u001B[0m\n\u001B[1;32m    142\u001B[0m \u001B[0;32mdef\u001B[0m \u001B[0mrelative\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcorpus_name\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mquery1\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mquery2\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    143\u001B[0m     \u001B[0mrf_de\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mrelative_frequency\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcorpus_name\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mquery1\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 144\u001B[0;31m     \u001B[0mrf_noun\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mrelative_frequency\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcorpus_name\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mquery2\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    145\u001B[0m     \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcorpus_name\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;34m\": \"\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;34m\" de:\"\u001B[0m  \u001B[0;34m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mrf_de\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;34m\", noun:\"\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mrf_noun\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    146\u001B[0m     \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcorpus_name\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;34m\": \"\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mrf_de\u001B[0m \u001B[0;34m/\u001B[0m \u001B[0mrf_noun\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m<ipython-input-1-9c7f8d04904a>\u001B[0m in \u001B[0;36mrelative_frequency\u001B[0;34m(corpus_name, query)\u001B[0m\n\u001B[1;32m    119\u001B[0m     \u001B[0minfo\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcorpus\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcorpus_info\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    120\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 121\u001B[0;31m     \u001B[0msearched_corpus\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcorpus\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmax_results\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m10\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpattern\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mquery\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0msearch\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    122\u001B[0m     \u001B[0mdf\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0msearched_corpus\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mkwic\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    123\u001B[0m     \u001B[0;31m# display_df(df)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;32m~/workspace/LidWoord/chaininglib/search/CorpusQuery.py\u001B[0m in \u001B[0;36msearch\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    316\u001B[0m         \u001B[0;32mexcept\u001B[0m \u001B[0mException\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0me\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    317\u001B[0m             \u001B[0mstatus\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mremove_wait_indicator\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 318\u001B[0;31m             \u001B[0;32mraise\u001B[0m \u001B[0mValueError\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"An error occured when searching corpus \"\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_resource\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;34m\": \"\u001B[0m\u001B[0;34m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0me\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    319\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    320\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mValueError\u001B[0m: An error occured when searching corpus chn_i: syntax error: line 1, column 49"
      ]
     }
    ],
    "source": [
-    "wablief_test()\n",
+    "wablieft_test()\n",
+    "chn_test()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "hydraulic-language",
    "metadata": {},
    "outputs": [
@@ -213,7 +247,8 @@
       "summary:{'windowHasNext': 'true', 'numberOfHits': 26493725, 'numberOfDocs': 1729741, 'hits_per_million': 48146.47539045345}\n",
       "\u001B[Finfo:{'tokenCount': 550273406, 'documentCount': 2078773}                                                                             \n",
       "summary:{'windowHasNext': 'true', 'numberOfHits': 90691223, 'numberOfDocs': 2064067, 'hits_per_million': 164811.204777721}\n",
-      "de:48146.47539045345, noun:164811.204777721\n"
+      "opensonar:  de:48146.47539045345, noun:164811.204777721\n",
+      "opensonar: 0.29213108086545486\n"
      ]
     }
    ],
@@ -597,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "potential-riding",
    "metadata": {
     "scrolled": true
@@ -607,7 +642,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[F...Searching chn_i at result 0...                                                                                                                                                                                                                                                                                                                                                                                    "
+      "\u001B[F                                                                                                                                                                                                                                                                                                                                                 "
      ]
     },
     {
@@ -624,7 +659,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "94debe8d2f694d12be26bd8db94ff60f"
+       "model_id": "d2b344aba0eb4c158fd1df640eb55d24"
       }
      },
      "metadata": {},
