--- a/contrib/Lidwood.ipynb
+++ b/contrib/Lidwood.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "prime-advisory",
    "metadata": {},
    "outputs": [],
@@ -109,8 +109,8 @@
     "  return query.replace(\"]\", \" | lemma='gna_gna_\" + str(random.randint(0,1000000)) +  \"']\")\n",
     "\n",
     "# simulate grouping by separate querying for each value\n",
-    "def silly_grouping(corpus_name, query, field, values):\n",
-    "    result_frames = list(map(lambda value: search_and_group(corpus_name, obfuscate(query), field, filter={field: value}, validity_filter=\"^[0-9]{4}$\"), values))\n",
+    "def silly_grouping(corpus_name, query, field, values, validity_filter=\"^[0-9]{4}$\"):\n",
+    "    result_frames = list(map(lambda value: search_and_group(corpus_name, obfuscate(query), field, filter={field: value}, validity_filter=validity_filter), values))\n",
     "    concatenation =  pd.concat(result_frames)\n",
     "    display_df(concatenation)\n",
     "    plot_df(concatenation, 'identityDisplay', 'hits_per_million')\n",
@@ -126,8 +126,11 @@
     "        merged_frame = pd.merge(merged_frame,renamed_frame,on=key_field,how='outer')\n",
     "    return merged_frame\n",
     "\n",
-    "def search_and_group_multiple(corpus_name, queries, grouping_field, filter=None, validity_filter=\"^[0-9]{4}$\"):\n",
-    "  dataframes = list(map(lambda x: search_and_group(corpus_name, x, grouping_field, filter, validity_filter), queries))\n",
+    "def search_and_group_multiple(corpus_name, queries, grouping_field, filter=None, validity_filter=\"^[0-9]{4}$\", values=None):\n",
+    "  if values:\n",
+    "      dataframes = list(map(lambda q: silly_grouping(corpus_name, q, grouping_field, filter, values, validity_filter), queries))\n",
+    "  else:\n",
+    "      dataframes = list(map(lambda q: search_and_group(corpus_name, q, grouping_field, filter, validity_filter), queries))\n",
     "\n",
     "  #join the frames\n",
     "  field_to_show = 'hits_per_million'\n",
@@ -139,7 +142,7 @@
     "  renamed_frame = merged.rename(columns=rename_columns)\n",
     "  \n",
     "  #display_df(renamed_frame)\n",
-    "  plot_df(renamed_frame, 'identityDisplay', y_columns=queries  )\n",
+    "  plot_df(renamed_frame, 'identityDisplay', y_columns=queries)\n",
     "  return zip(queries,dataframes)\n",
     "    \n",
     "def relative_frequency(corpus_name, query):\n",
@@ -185,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "preliminary-engineer",
    "metadata": {
     "scrolled": true
@@ -201,29 +204,8 @@
       "wablieft: 0.2848597910789725\n",
       "REQUEST URL:http://svotmc10.ivdnt.loc/blacklab-server/chn/hits?&number=10&maxcount=-1&waitfortotal=yes&first=0&patt=%5Blemma%3D%27de%27%5D&filter=\n",
       "\u001B[F                                                                 REQUEST URL:http://svotmc10.ivdnt.loc/blacklab-server/chn/hits?&number=10&maxcount=-1&waitfortotal=yes&first=0&patt=%5Bpos%3D%27NOU-C.%2A%27%5D&filter=\n",
-      "\u001B[F                                                                 "
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "An error occured when searching corpus chn_i: syntax error: line 1, column 49",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mParseError\u001B[0m                                Traceback (most recent call last)",
-      "\u001B[0;32m~/workspace/LidWoord/chaininglib/search/CorpusQuery.py\u001B[0m in \u001B[0;36msearch\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    269\u001B[0m                 \u001B[0;32mif\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_pattern\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 270\u001B[0;31m                     \u001B[0mdf\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mnext_page\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0msummary\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcorpusHelpers\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_parse_xml_blacklab\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mresponse_text\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_detailed_context\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_extra_fields_doc\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_extra_fields_token\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mis_grouped\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    271\u001B[0m                 \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/workspace/LidWoord/chaininglib/search/corpusHelpers.py\u001B[0m in \u001B[0;36m_parse_xml_blacklab\u001B[0;34m(text, detailed_context, extra_fields_doc, extra_fields_token, is_grouped_response)\u001B[0m\n\u001B[1;32m    352\u001B[0m     \u001B[0;31m#print(text)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 353\u001B[0;31m     \u001B[0mparsed_summary\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0m_parse_xml_summary_blacklab\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtext\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    354\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/workspace/LidWoord/chaininglib/search/corpusHelpers.py\u001B[0m in \u001B[0;36m_parse_xml_summary_blacklab\u001B[0;34m(text)\u001B[0m\n\u001B[1;32m    268\u001B[0m \u001B[0;32mdef\u001B[0m \u001B[0m_parse_xml_summary_blacklab\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtext\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 269\u001B[0;31m   \u001B[0mroot\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mET\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfromstring\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtext\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    270\u001B[0m   \u001B[0msummary\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mroot\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfind\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"summary\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m/usr/lib/python3.7/xml/etree/ElementTree.py\u001B[0m in \u001B[0;36mXML\u001B[0;34m(text, parser)\u001B[0m\n\u001B[1;32m   1314\u001B[0m         \u001B[0mparser\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mXMLParser\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtarget\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mTreeBuilder\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 1315\u001B[0;31m     \u001B[0mparser\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfeed\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtext\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   1316\u001B[0m     \u001B[0;32mreturn\u001B[0m \u001B[0mparser\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mclose\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mParseError\u001B[0m: syntax error: line 1, column 49",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "\u001B[0;32m<ipython-input-2-756eee64c975>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0mwablieft_test\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 2\u001B[0;31m \u001B[0mchn_test\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      3\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m<ipython-input-1-9c7f8d04904a>\u001B[0m in \u001B[0;36mchn_test\u001B[0;34m()\u001B[0m\n\u001B[1;32m    153\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    154\u001B[0m \u001B[0;32mdef\u001B[0m \u001B[0mchn_test\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 155\u001B[0;31m     \u001B[0mrelative\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m'chn_i'\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m\"[lemma='de']\"\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m\"[pos='NOU-C.*']\"\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    156\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m<ipython-input-1-9c7f8d04904a>\u001B[0m in \u001B[0;36mrelative\u001B[0;34m(corpus_name, query1, query2)\u001B[0m\n\u001B[1;32m    142\u001B[0m \u001B[0;32mdef\u001B[0m \u001B[0mrelative\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcorpus_name\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mquery1\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mquery2\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    143\u001B[0m     \u001B[0mrf_de\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mrelative_frequency\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcorpus_name\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mquery1\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 144\u001B[0;31m     \u001B[0mrf_noun\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mrelative_frequency\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcorpus_name\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mquery2\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    145\u001B[0m     \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcorpus_name\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;34m\": \"\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;34m\" de:\"\u001B[0m  \u001B[0;34m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mrf_de\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;34m\", noun:\"\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mrf_noun\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    146\u001B[0m     \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mcorpus_name\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;34m\": \"\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mrf_de\u001B[0m \u001B[0;34m/\u001B[0m \u001B[0mrf_noun\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m<ipython-input-1-9c7f8d04904a>\u001B[0m in \u001B[0;36mrelative_frequency\u001B[0;34m(corpus_name, query)\u001B[0m\n\u001B[1;32m    119\u001B[0m     \u001B[0minfo\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcorpus\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mcorpus_info\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    120\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 121\u001B[0;31m     \u001B[0msearched_corpus\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcorpus\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmax_results\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m10\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpattern\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mquery\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0msearch\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    122\u001B[0m     \u001B[0mdf\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0msearched_corpus\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mkwic\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    123\u001B[0m     \u001B[0;31m# display_df(df)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/workspace/LidWoord/chaininglib/search/CorpusQuery.py\u001B[0m in \u001B[0;36msearch\u001B[0;34m(self)\u001B[0m\n\u001B[1;32m    316\u001B[0m         \u001B[0;32mexcept\u001B[0m \u001B[0mException\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0me\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    317\u001B[0m             \u001B[0mstatus\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mremove_wait_indicator\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 318\u001B[0;31m             \u001B[0;32mraise\u001B[0m \u001B[0mValueError\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m\"An error occured when searching corpus \"\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_resource\u001B[0m \u001B[0;34m+\u001B[0m \u001B[0;34m\": \"\u001B[0m\u001B[0;34m+\u001B[0m \u001B[0mstr\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0me\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    319\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    320\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;31mValueError\u001B[0m: An error occured when searching corpus chn_i: syntax error: line 1, column 49"
+      "\u001B[Fchn_i:  de:61726.21046138488, noun:206508.70605097333            \n",
+      "chn_i: 0.2989036716260706\n"
      ]
     }
    ],
